[gd_scene load_steps=4 format=2]

[ext_resource path="res://project.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://add_train_dialog.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
project = NodePath("VBoxContainer/VBoxContainer/ViewportContainer/Viewport/Project")
train_controller_container = NodePath("VBoxContainer/VBoxContainer/VBoxContainer")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="AddTrain" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 68.0
margin_bottom = 22.0
text = "add train"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1012.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -297

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/VBoxContainer"]
margin_left = 215.0
margin_right = 1012.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/VBoxContainer/ViewportContainer"]
size = Vector2( 797, 566 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Project" parent="VBoxContainer/VBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="AddTrainDialog" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddTrain" to="." method="_on_AddTrain_pressed"]
[connection signal="data_received" from="VBoxContainer/VBoxContainer/ViewportContainer/Viewport/Project" to="." method="_on_Project_data_received"]
[connection signal="add_train" from="AddTrainDialog" to="." method="_on_AddTrainDialog_add_train"]
[connection signal="scan_device" from="AddTrainDialog" to="." method="_on_AddTrainDialog_scan_device"]
